@@ -15,7 +15,7 @@ import org.opensilex.core.experiment.dal.ExperimentModel;
 import org.opensilex.core.germplasm.dal.GermplasmDAO;
 import org.opensilex.core.germplasm.dal.GermplasmModel;
 import org.opensilex.core.ontology.Oeso;
-import org.opensilex.core.scientificObject.dal.ScientificObjectDAO;
+import org.opensilex.core.scientificObject.bll.ScientificObjectLogic;
 import org.opensilex.core.scientificObject.dal.ScientificObjectModel;
 import org.opensilex.security.account.dal.AccountModel;
 import org.opensilex.sparql.SPARQLModule;
@@ -28,8 +28,9 @@ import org.opensilex.sparql.service.SPARQLService;
 import java.net.URI;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 /**
  * @see <a href="https://app.swaggerhub.com/apis/PlantBreedingAPI/BrAPI/1.3">BrAPI documentation</a>
@@ -164,7 +165,7 @@ public class BrAPIv1ObservationDTO {
         this.value = value;
     }
 
-    public BrAPIv1ObservationDTO extractFromModel(DataModel dataModel, ExperimentModel expeModel, OntologyDAO ontologyDAO, SPARQLService sparql, AccountModel currentUser, ScientificObjectDAO scientificObjectDAO, GermplasmDAO germplasmDAO) throws Exception {
+    public BrAPIv1ObservationDTO extractFromModel(DataModel dataModel, ExperimentModel expeModel, OntologyDAO ontologyDAO, SPARQLService sparql, AccountModel currentUser, ScientificObjectLogic scientificObjectLogic, GermplasmDAO germplasmDAO) throws Exception {
 
         Node experimentGraph = NodeFactory.createURI(expeModel.getUri().toString());
 
@@ -209,13 +210,16 @@ public class BrAPIv1ObservationDTO {
         if (dataModel.getValue() != null) {
             this.setValue(dataModel.getValue().toString());
         }
-        List<SPARQLNamedResourceModel> uriLabels = ontologyDAO.getURILabels(List.of(dataModel.getTarget()), currentUser.getLanguage(), expeModel.getUri());
+        List<SPARQLNamedResourceModel> uriLabels = new ArrayList<>();
+        if (Objects.nonNull(dataModel.getTarget())){
+            uriLabels = ontologyDAO.getURILabels(List.of(dataModel.getTarget()), currentUser.getLanguage(), expeModel.getUri());
+        }
         if (!uriLabels.isEmpty() && SPARQLModule.getOntologyStoreInstance().classExist(
                 uriLabels.get(0).getType(), new URI(Oeso.ScientificObject.getURI())
         )){
-            ScientificObjectModel objectModel = scientificObjectDAO.getObjectByURI(dataModel.getTarget(), expeModel.getUri(), currentUser.getLanguage());
-            List<SPARQLModelRelation> germplasms = objectModel.getRelations(Oeso.hasGermplasm).distinct().collect(Collectors.toList());
-            if (germplasms.size() >= 1){
+            ScientificObjectModel objectModel = scientificObjectLogic.getObjectByURI(dataModel.getTarget(), expeModel.getUri(), currentUser);
+            List<SPARQLModelRelation> germplasms = objectModel.getRelations(Oeso.hasGermplasm).distinct().toList();
+            if (!germplasms.isEmpty()){
                 GermplasmModel germplasmModel = germplasmDAO.get(new URI(germplasms.get(0).getValue()), currentUser, false);
                 if (SPARQLDeserializers.compareURIs(germplasmModel.getType(), BrAPIv1AccessionWarning.ACCESSION_URI)) {
                     this.setGermplasmDbId(germplasmModel.getUri().toString());
@@ -227,8 +231,8 @@ public class BrAPIv1ObservationDTO {
         return this;
     }
 
-    public static BrAPIv1ObservationDTO fromModel(DataModel dataModel, ExperimentModel expeModel, OntologyDAO ontologyDAO, SPARQLService sparql, AccountModel currentUser, ScientificObjectDAO scientificObjectDAO, GermplasmDAO germplasmDAO) throws Exception {
+    public static BrAPIv1ObservationDTO fromModel(DataModel dataModel, ExperimentModel expeModel, OntologyDAO ontologyDAO, SPARQLService sparql, AccountModel currentUser, ScientificObjectLogic scientificObjectLogic, GermplasmDAO germplasmDAO) throws Exception {
         BrAPIv1ObservationDTO observation = new BrAPIv1ObservationDTO();
-        return observation.extractFromModel(dataModel, expeModel, ontologyDAO, sparql, currentUser, scientificObjectDAO, germplasmDAO);
+        return observation.extractFromModel(dataModel, expeModel, ontologyDAO, sparql, currentUser, scientificObjectLogic, germplasmDAO);
     }
 }
